# freedom-e-sdk

./: .gitattributes  .gitignore  .gitmodules  .self.wake  .travis.yml  Bridge_Freedom-metal_FreeRTOS.c  FreeRTOSConfig.h  LICENSE  Makefile  Makefile.am  README.md  analyze_rtlsim_result.py  atomics.c  build.wake  buserror.c  calculate_heap_size.sh  cflush.c  clic-hardware-vector-interrupts.c  clic-nested-interrupts.c  clic-nonvector-interrupts.c  clic-selective-vector-interrupts.c  clic-vector-interrupts.c  configure.ac  coreip-welcome.c  debug.mk  dhry_1.c  example-coreip-welcome.c  example-freertos-blinky-pmp.c  example-freertos-blinky.c  example-freertos-minimal.c  example-freertos-pmp-blinky.c  example-hca-metal.c  example-hpm.c  example-i2c.c  example-itim.c  example-l2pf.c  example-l2pm.c  example-lim.c  example-pmp.c  example-spi.c  (+22 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
FreeRTOS-metal/: FreeRTOS.mk  LICENSE  LICENSE.MIT  README.md
SEGGER_SystemView-metal/: README.md  SystemView.mk
Segger_SystemView-metal/: LICENSE  LICENSE.SEGGER
bitfile/: README.md
bootrom/: bram.mk
bsp/: conanfile.py  mee-common.mk  update-targets.sh
doc/: Makefile  README.md  mee-spec.md
docker/: Dockerfile
dts/: hifive1.dts  qemu-sifive_e-32.dts
freedom-metal/: core_portme.c  core_portme.h  core_portme.mak  ee_printf.c
inst/: inst.py  usb.py
mee/: clock.h  compiler.h  io.h  machine.h  shutdown.h  tty.h  uart.h
scripts/: all-targets-build  check-bsps-updated  check-submodules  convert-dts  coreip-rtl-regression.bash  create-release-notes.sh  (+28 more)
(+901 files in other folders)
